[package]
name = "bbs"
version = "0.1.0"
edition = "2024"

[dependencies]
needletail = "0.5.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simple_logger = { version = "3", features = ["stderr"] }
glob = "0.3.2"
clap = { version = "3", features = ["derive"] }
cached = "0.41.0"